--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,9 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="font-sans">
+  <body>
     <%= render "components/nav" %>
-    <main class="@container/main mx-auto sm:mt-4 flex bg-base-200/30 sm:bg-base-100">
+    <main class="@container/main mx-auto sm:mt-4 flex bg-base-200/30 sm:bg-base-100 mb-16">
       <%= yield %>
     </main>
   </body>
