--- a/app/views/stories/_story.html.erb
+++ b/app/views/stories/_story.html.erb
@@ -6,7 +6,12 @@
   class="p-4 cursor-pointer">
 
   <div class="mb-2">
-    <%= link_to story.title_in(current_locale), story_path(story), class: 'text-base hover:link hover:text-primary' %>
+    <%= link_to story.title, 
+      story_path(story), 
+      data: {
+        turbo_frame: '_top',
+      },
+      class: 'text-base hover:link hover:text-primary' %>
 
     <% if story.published_at < 3.days.ago %>
       <span data-controller="time-format" 
@@ -24,7 +29,7 @@
   <div 
     data-card-target="summary" 
     class="opacity-70 text-sm/loose sm:line-clamp-3 hidden hover:opacity-100">
-    <%= story.summary_in(current_locale) %>
+    <%= story.summary %>
   </div>
   <div data-card-target="links" class="hidden mt-4">
     <div class="flex justify-end">
