--- a/app/views/topics/_topic.html.erb
+++ b/app/views/topics/_topic.html.erb
@@ -6,25 +6,22 @@
   class="p-4 cursor-pointer">
 
   <div class="mb-2">
-    <%= link_to topic.title_in(current_locale), topic_path(topic), class: 'text-base hover:link hover:text-primary' %>
+    <span class="relative text-base sm:hover:link sm:hover:text-primary">
+      <%= topic.title %>
+      <%= link_to '', topic_path(topic), 
+        data: {
+          turbo_frame: '_top',
+        },
+        class: 'absolute inset-0 w-full hidden sm:block' %>
+    </span>
 
-    <% if topic.published_at < 3.days.ago %>
-      <span data-controller="time-format" 
-            data-time-format-timestamp-value="<%= topic.published_at.to_i %>" 
-        class="text-sm opacity-50">
-        <%= topic.published_at %>
-      </span>
-    <% else %>
-      <span class="text-sm opacity-50">
-        <%= time_ago_in_words(topic.published_at) %>
-      </span>
-    <% end %>
+    <%= render 'components/datetime', datetime: topic.published_at %>
   </div>
 
   <div 
     data-card-target="summary" 
     class="opacity-70 text-sm/loose sm:line-clamp-3 hidden hover:opacity-100">
-    <%= topic.summary_in(current_locale) %>
+    <%= topic.summary %>
   </div>
 
   <div data-card-target="links" class="hidden mt-6">
@@ -33,7 +30,12 @@
     </ul>
 
     <div class="flex justify-end">
-      <%= link_to t('.topic'), topic_path(topic), target: "_blank", class: "text-sm opacity-70 link capitalize" %>
+      <%= link_to t('.detail'), 
+        topic_path(topic), 
+        data: {
+          turbo_frame: '_top',
+        },
+        class: "text-sm opacity-70 link capitalize" %>
     </div>
   </div>
 </div>
