--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -1,6 +1,6 @@
 <div class="w-full max-w-prose mx-auto p-5 bg-white rounded-lg">
   <div class="text-lg/loose font-bold mb-2">
-    <%= @story.title %>
+    <%= @story.title_text %>
   </div>
 
   <div class="mb-4">
@@ -8,7 +8,7 @@
   </div>
 
   <div class="mb-6 prose">
-    <%= Kramdown::Document.new(@story.content, input: 'GFM').to_html.html_safe %>
+    <%= Kramdown::Document.new(@story.content_text, input: 'GFM').to_html.html_safe %>
   </div>
 
   <% if @story.related_stories.present? %>
