--- a/app/views/topics/_topic.html.erb
+++ b/app/views/topics/_topic.html.erb
@@ -7,7 +7,7 @@
 
   <div class="mb-2">
     <span class="relative text-base sm:hover:link sm:hover:text-primary">
-      <%= topic.title %>
+      <%= topic.title_text %>
       <%= link_to '', topic_path(topic), 
         data: {
           turbo_frame: '_top',
@@ -21,7 +21,7 @@
   <div 
     data-card-target="summary" 
     class="opacity-70 text-sm/loose sm:line-clamp-3 hidden hover:opacity-100">
-    <%= topic.summary %>
+    <%= topic.summary_text %>
   </div>
 
   <div data-card-target="links" class="hidden mt-6">
