--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -1,13 +1,17 @@
-<div class="w-full max-w-prose mx-auto p-5 bg-white rounded-lg">
-  <div class="text-lg/loose font-bold mb-2">
-    <%= @story.title_text %>
+<div class="w-full max-w-prose mx-auto p-5 bg-white rounded-lg space-y-8">
+  <div>
+    <div class="text-lg/loose font-bold mb-2">
+      <%= @story.title_text %>
+    </div>
+
+    <div class="">
+      <span class="text-sm opacity-70">
+        <%= render 'components/datetime', datetime: @story.published_at %>
+      </span>
+    </div>
   </div>
 
-  <div class="mb-4">
-    <%= render 'components/datetime', datetime: @story.published_at %>
-  </div>
-
-  <div class="mb-6 prose">
+  <div class="prose">
     <%= Kramdown::Document.new(@story.content_text, input: 'GFM').to_html.html_safe %>
   </div>
 
@@ -22,7 +26,7 @@
     </div>
   <% end %>
 
-  <div class="flex justify-between pt-4 mb-4 border-t">
+  <div class="flex justify-between pt-4 border-t">
     <div class="text-sm">
       <%= t('.from') %>:
       <span class="ml-1 font-bold"><%= @story.domain_name %></span>
