--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,17 +1,21 @@
-<div class="w-full max-w-prose mx-auto p-5 bg-white rounded-lg">
-  <div class="text-lg/loose font-bold mb-2">
-    <%= @topic.title_text %>
+<div class="w-full max-w-prose mx-auto p-5 bg-white rounded-lg space-y-8">
+  <div>
+    <div class="text-lg/loose font-bold mb-2">
+      <%= @topic.title_text %>
+    </div>
+
+    <div class="">
+      <span class="text-sm opacity-70">
+        <%= render 'components/datetime', datetime: @topic.published_at %>
+      </span>
+    </div>
   </div>
 
-  <div class="mb-4">
-    <%= render 'components/datetime', datetime: @topic.published_at %>
-  </div>
-
-  <div class="mb-6 prose">
+  <div class="prose">
     <%= Kramdown::Document.new(@topic.content_text, input: 'GFM').to_html.html_safe %>
   </div>
 
-  <div class="mb-6">
+  <div class="">
     <div class="text-base/loose font-bold mb-4">
       <%= t('.media_reports') %>
     </div>
@@ -20,7 +24,18 @@
     </ul>
   </div>
 
-  <div class="flex justify-between pt-4 mb-4 border-t">
+  <% if @topic.related_topics.present? %>
+    <div class="mb-6">
+      <div class="text-base/loose font-bold mb-4">
+        <%= t('.topic_tracing') %>
+      </div>
+      <ul class="list-[square] list-inside">
+        <%= render partial: "topics/link", collection: @topic.related_topics, as: :topic %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="flex justify-between pt-4 border-t">
     <div class="text-sm">
       <%= t('.from') %>:
       <span class="ml-1 font-bold"><%= @topic.source.domain_name %></span>
