--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -1,6 +1,6 @@
 <div class="w-full max-w-prose mx-auto p-5 bg-white rounded-lg space-y-8">
   <div>
-    <div class="text-lg/loose font-bold mb-2">
+    <div class="text-lg mb-2">
       <%= @story.title_text %>
     </div>
 
@@ -17,7 +17,7 @@
 
   <% if @story.related_stories.present? %>
     <div class="mb-6">
-      <div class="text-base/loose font-bold mb-4">
+      <div class="text-base/loose mb-4">
         <%= t('.related') %>
       </div>
       <ul class="list-[square] list-inside">
@@ -29,7 +29,7 @@
   <div class="flex justify-between pt-4 border-t">
     <div class="text-sm">
       <%= t('.from') %>:
-      <span class="ml-1 font-bold"><%= @story.domain_name %></span>
+      <span class="ml-1 font-mono"><%= @story.domain_name %></span>
     </div>
     <%= link_to t('.original_link'), 
       @story.url, 
