--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,6 +1,6 @@
 <div class="w-full max-w-prose mx-auto p-5 bg-white rounded-lg space-y-8">
   <div>
-    <div class="text-lg/loose font-bold mb-2">
+    <div class="text-lg mb-2">
       <%= @topic.title_text %>
     </div>
 
@@ -16,7 +16,7 @@
   </div>
 
   <div class="">
-    <div class="text-base/loose font-bold mb-4">
+    <div class="text-base/loose mb-4">
       <%= t('.media_reports') %>
     </div>
     <ul class="list-[square] list-inside">
@@ -26,7 +26,7 @@
 
   <% if @topic.related_topics.present? %>
     <div class="mb-6">
-      <div class="text-base/loose font-bold mb-4">
+      <div class="text-base/loose mb-4">
         <%= t('.topic_tracing') %>
       </div>
       <ul class="list-[square] list-inside">
@@ -38,7 +38,7 @@
   <div class="flex justify-between pt-4 border-t">
     <div class="text-sm">
       <%= t('.from') %>:
-      <span class="ml-1 font-bold"><%= @topic.source.domain_name %></span>
+      <span class="ml-1 font-mono"><%= @topic.source.domain_name %></span>
     </div>
     <%= link_to t('.original_link'), 
       @topic.url, 
