--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html data-theme="autumn">
   <head>
-    <%= display_meta_tags site: 'ReadX' %>
+    <%= display_meta_tags site: 'ReadX', og: { title: 'ReadX',  image: image_url('bg.png')}, twitter: { card: 'summary', image: image_url('bg.png')}  %>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="theme-color" content="#f2f2f2" />
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
