--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -12,7 +12,8 @@
   </div>
 
   <div class="prose">
-    <%= Kramdown::Document.new(@story.content_text, input: 'GFM').to_html.html_safe %>
+    <%= @story.summary_text %>
+    <%# <%= Kramdown::Document.new(@story.content_text, input: 'GFM').to_html.html_safe %>
   </div>
 
   <% if @story.related_stories.present? %>
