--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -12,7 +12,8 @@
   </div>
 
   <div class="prose">
-    <%= Kramdown::Document.new(@topic.content_text, input: 'GFM').to_html.html_safe %>
+    <%= @topic.summary_text %>
+    <%# <%= Kramdown::Document.new(@topic.content_text, input: 'GFM').to_html.html_safe %>
   </div>
 
   <div class="">
