--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -13,7 +13,7 @@
 
   <div class="prose">
     <%= @topic.summary_text %>
-    <%# <%= Kramdown::Document.new(@topic.content_text, input: 'GFM').to_html.html_safe %>
+    <%= render 'stories/full_content_button', story: @topic.source if @topic.content_text.length > 200 %>
   </div>
 
   <div class="">
