--- a/app/views/stories/_link.html.erb
+++ b/app/views/stories/_link.html.erb
@@ -1,4 +1,9 @@
 <li class="text-sm text-second py-1">
-  <%= link_to story.title_text, story_path(story), target: "_blank", class: "hover:text-primary" %>
+  <%= link_to story.title_text, 
+    story_path(story), 
+    data: {
+      controller: 'prefetch'
+    },
+    class: "hover:text-primary" %>
   <span class="text-xs opacity-70 ml-1"><%= story.domain_name %></span>
 </li>
