--- a/app/views/stories/content.html.erb
+++ b/app/views/stories/content.html.erb
@@ -2,10 +2,10 @@
   <!-- Open the modal using ID.showModal() method -->
   <dialog data-controller="modal" id="<%= dom_id @story %>_modal" class="modal modal-bottom sm:modal-middle">
     <form method="dialog" class="modal-box !pt-0 scrollbar-hide bg-white relative">
-      <div class="flex justify-between py-4 border-b mb-4 sticky top-0 bg-white">
-        <div class="text-sm">
-          <%= t('.from') %>:
-          <span class="ml-1 font-mono"><%= @story.domain_name %></span>
+      <div class="flex justify-between pt-5 pb-2 border-b mb-4 sticky top-0 bg-white">
+        <div class="text-sm ml-1 font-serif">
+          <span class=""><%= t('.from') %>:</span>
+          <span class=""><%= @story.domain_name %></span>
         </div>
         <%= link_to t('.original_link'), 
           @story.url, 
