--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -13,7 +13,7 @@
 
   <div class="prose">
     <%= @story.summary_text %>
-    <%= render 'stories/full_content_button', story: @story if @story.content_text.length > 200 %>
+    <%= render 'stories/full_content_button', story: @story if @story.content_text.length > 300 %>
   </div>
 
   <% if @story.related_stories.present? %>
@@ -28,9 +28,9 @@
   <% end %>
 
   <div class="flex justify-between pt-4 border-t">
-    <div class="text-sm">
-      <%= t('.from') %>:
-      <span class="ml-1 font-mono"><%= @story.domain_name %></span>
+    <div class="text-sm ml-1 font-serif">
+      <span class=""><%= t('.from') %>:</span>
+      <span class=""><%= @story.domain_name %></span>
     </div>
     <%= link_to t('.original_link'), 
       @story.url, 
