--- a/app/views/components/_nav.html.erb
+++ b/app/views/components/_nav.html.erb
@@ -20,6 +20,21 @@
           </li>
         </ul>
       </details>
+
+      <% if from_mixin_messenger? %>
+        <%= link_to "", 
+          target: "_blank", 
+          class: "btn btn-square btn-ghost",
+          data: { 
+            controller: 'share-link', 
+            share_link_target_value: 'mixin',
+            share_link_app_id_value: ReadxBot.api.client_id
+          } do %>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M7.217 10.907a2.25 2.25 0 100 2.186m0-2.186c.18.324.283.696.283 1.093s-.103.77-.283 1.093m0-2.186l9.566-5.314m-9.566 7.5l9.566 5.314m0 0a2.25 2.25 0 103.935 2.186 2.25 2.25 0 00-3.935-2.186zm0-12.814a2.25 2.25 0 103.933-2.185 2.25 2.25 0 00-3.933 2.185z" />
+          </svg>
+        <% end %>
+      <% end %>
     </div>
     <div class="flex-none mx-auto sm:mx-6">
       <%= link_to root_path, class: 'text-xl' do %>
