--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html data-theme="autumn">
   <head>
-    <%= display_meta_tags site: 'ReadX', og: { title: 'ReadX',  image: image_url('bg.png')}, twitter: { card: 'summary', image: image_url('bg.png')}  %>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <%= display_meta_tags site: 'ReadX', og: { title: 'ReadX',  image: image_url('bg.png')}, twitter: { card: 'summary', image: image_url('bg.png')}, description: t('page_description')  %>
+    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, user-scalable=no, shrink-to-fit=no, viewport-fit=cover">
     <meta name="theme-color" content="#f2f2f2" />
 
     <%= csrf_meta_tags %>
