--- a/app/views/components/_nav.html.erb
+++ b/app/views/components/_nav.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar bg-base-100 border-b" data-controller="nav" data-nav-path="<%= request.params['type'] %>">
+<div class="navbar min-h-12 sm:min-h-16 bg-base-100 border-b" data-controller="nav" data-nav-path="<%= request.params['type'] %>">
   <div class="w-full max-w-4xl mx-auto flex items-center relative">
     <div class="absolute left-0 sm:hidden">
       <details class="dropdown dropdown-start">
