do not show translated content

--- a/app/views/stories/content.html.erb
+++ b/app/views/stories/content.html.erb
@@ -16,8 +16,8 @@
       <h3 class="text-lg mb-4">
         <%= @story.title_text %>
       </h3>
-      <div class="prose mb-16">
-        <%= Kramdown::Document.new(@story.content_text, input: 'GFM').to_html.html_safe %>
+      <div class="prose mb-16 overflow-hidden">
+        <%= Kramdown::Document.new(@story.content, input: 'GFM').to_html.html_safe %>
       </div>
     </form>
     <form method="dialog" class="modal-backdrop">
