--- a/app/views/service_worker/manifest.json.erb
+++ b/app/views/service_worker/manifest.json.erb
@@ -33,5 +33,5 @@
   "background_color": "#f2f2f2",
   "display": "standalone",
   "scope": "/",
-  "theme_color": "#f2f2f2"
+  "theme_color": "#8c0327"
 }
