--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,20 @@
     <%= javascript_importmap_tags %>
     <link rel="manifest" crossorigin="use-credentials" href="/manifest.json" />
   </head>
-  <body>
 
+  <% if Rails.env.production? %>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=<%= Setting.google_analytics %>"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', "G-8GMXH7YLSN");
+    </script>
+  <% end %>
+
+  <body>
     <main class="@container/main bg-base-200/30 sm:bg-base-100 min-h-screen drawer lg:drawer-open">
       <input id="main-drawer" type="checkbox" class="drawer-toggle" />
       <div class="drawer-content w-full mx-auto">
