--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -9,7 +9,7 @@
         </div>
         <div data-infinite-scroll-target="scrollArea"></div>
         <div id="topics-pagy">
-          <%= render 'components/pagy', pagy: @pagy %>
+          <%= render 'components/pagy', pagy: @pagy, before: @topics.last&.id %>
         </div>
       <% end %>
     <% end %>
