--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -4,7 +4,14 @@
       <% if @topics.blank? %>
         <%= render 'components/empty' %>
       <% else %>
-        <div id="topics-list" class="divide-y">
+        <div id="topics-notice"></div>
+        <div data-infinite-scroll-target="pending" 
+             data-url="<%= url_for %>" 
+             id="topics-pending"
+             class="hidden">
+        </div>
+
+        <div data-infinite-scroll-target="items" id="topics-list" class="divide-y">
           <%= render partial: "topics/topic", collection: @topics %>
         </div>
         <div data-infinite-scroll-target="scrollArea"></div>
