--- a/app/views/components/_datetime.html.erb
+++ b/app/views/components/_datetime.html.erb
@@ -1,10 +1,5 @@
-<% if datetime < 3.days.ago %>
-  <span data-controller="time-format" 
-        data-time-format-timestamp-value="<%= datetime.to_i %>">
-    <%= datetime %>
-  </span>
-<% else %>
-  <span>
-    <%= time_ago_in_words(datetime) %>
-  </span>
-<% end %>
+<span data-controller="time-format" 
+      data-time-format-locale-value="<%= current_locale %>"
+      data-time-format-timestamp-value="<%= datetime.to_i %>">
+  <%= time_ago_in_words(datetime) %>
+</span>
