--- a/app/views/stories/_story.html.erb
+++ b/app/views/stories/_story.html.erb
@@ -1,36 +1,38 @@
-<div 
-  data-controller="card" 
-  data-card-active-value="false"
-  data-action="click->card#toggle" 
-  id="<%= dom_id story %>" 
-  class="p-5 cursor-pointer space-y-4">
-
-  <div class="relative">
-    <span data-card-target="title" class="text-base sm:hover:link sm:hover:text-primary">
-      <%= story.title_text %>
-      <%= link_to '', 
-        story_path(story), 
-        data: {
-          controller: 'prefetch',
-          turbo_frame: '_top'
-        },
-        class: 'absolute inset-0 w-full hidden sm:block' %>
-    </span>
-
-    <span class="text-xs opacity-50">
-      <%= render 'components/datetime', datetime: story.published_at %>
-    </span>
-  </div>
-
+<% cache [story, current_locale] do %>
   <div 
-    data-card-target="summary" 
-    class="opacity-70 text-sm/loose sm:line-clamp-3 hidden hover:opacity-100">
-    <%= story.summary_text %>
-  </div>
+    data-controller="card" 
+    data-card-active-value="false"
+    data-action="click->card#toggle" 
+    id="<%= dom_id story %>" 
+    class="p-5 cursor-pointer space-y-4">
 
-  <div data-card-target="links" class="hidden">
-    <div class="flex justify-end">
-      <span class="text-xs opacity-70 ml-1"><%= story.domain_name %></span>
+    <div class="relative">
+      <span data-card-target="title" class="text-base sm:hover:link sm:hover:text-primary">
+        <%= story.title_text %>
+        <%= link_to '', 
+          story_path(story), 
+          data: {
+            controller: 'prefetch',
+            turbo_frame: '_top'
+          },
+          class: 'absolute inset-0 w-full hidden sm:block' %>
+      </span>
+
+      <span class="text-xs opacity-50">
+        <%= render 'components/datetime', datetime: story.published_at %>
+      </span>
+    </div>
+
+    <div 
+      data-card-target="summary" 
+      class="opacity-70 text-sm/loose sm:line-clamp-3 hidden hover:opacity-100">
+      <%= story.summary_text %>
+    </div>
+
+    <div data-card-target="links" class="hidden">
+      <div class="flex justify-end">
+        <span class="text-xs opacity-70 ml-1"><%= story.domain_name %></span>
+      </div>
     </div>
   </div>
-</div>
+<% end %>
